--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,1 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap");
+
+@mixin title-fontstyle {
+  font-family: $text-font;
+  font-size: 24px;
+  font-weight: bold;
+}
