--- a/sass/pages/accueil/_reservation.scss
+++ b/sass/pages/accueil/_reservation.scss
@@ -1,9 +1,10 @@
 .reservation {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
   padding-top: 27px;
   padding-bottom: 57px;
+  gap: 25px;
   background-color: $background-main-color;
   h1 {
     @include title-fontstyle;
@@ -15,4 +16,16 @@
     font-weight: lighter;
     text-align: center;
   }
+}
+
+.btn-primary {
+  height: 50px;
+  width: 60%;
+  background: linear-gradient(0deg, $primary-color 0%, $secondary-color 100%);
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  color: white;
+  font-family: $text-font;
+  font-size: 16px;
 }
