--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -6,12 +6,17 @@ p {
 }
 
 a {
+  color: inherit;
   text-decoration: none;
+
+  &:visited {
+    color: inherit;
+  }
 }
 
 body {
   margin: 0;
 }
-*{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+* {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
