--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,6 +9,8 @@ $background-grey-color: #353535;
 $white-text-color: #ffffff;
 $grey2: #eaeaea;
 $icon-color: #7e7e7e;
+$new-btn-background: #99e2d0;
+$new-btn-txt-color: #008766;
 
 //Polices
 $title-font: "Shrikhand";
