Creation de mixin + MAJ styling

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,3 +5,9 @@
   font-size: 24px;
   font-weight: bold;
 }
+
+@mixin text-fontstyle($font: $text-font, $size: 16px, $weight: normal) {
+  font-family: $font;
+  font-size: $size;
+  font-weight: $weight;
+}
