--- a/sass/pages/accueil/_location-bar.scss
+++ b/sass/pages/accueil/_location-bar.scss
@@ -7,8 +7,7 @@
   input {
     border: none;
     background-color: $grey2;
-    font-size: 16px;
-    font-family: $text-font;
+    @include text-fontstyle($size: 16px, $weight: normal);
     text-align: center;
   }
   .fa-location-dot {
