--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -3,3 +3,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin flex-column-gap($gap: 0) {
+  display: flex;
+  flex-direction: column;
+  gap: $gap;
+}
