Styling page menu

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,3 +20,4 @@
 @import "./pages/accueil/reservation";
 @import "./pages/accueil/fonctionnemnt";
 @import "./pages/accueil/restaurant";
+@import "./pages/menu/menu";
