--- a/sass/pages/accueil/_reservation.scss
+++ b/sass/pages/accueil/_reservation.scss
@@ -13,3 +13,10 @@
     text-align: center;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .reservation {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
