--- a/sass/pages/accueil/_restaurant.scss
+++ b/sass/pages/accueil/_restaurant.scss
@@ -58,3 +58,19 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) {
+  .restaurants {
+    padding: 30px 20px 30px 20px;
+    .card-wrap {
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 0;
+      row-gap: 50px;
+      justify-content: space-between;
+      > a {
+        width: 45%;
+      }
+    }
+  }
+}
