--- a/sass/pages/accueil/_restaurant.scss
+++ b/sass/pages/accueil/_restaurant.scss
@@ -1,16 +1,25 @@
 .restaurants {
-  @include flex-column-gap(18px);
-  padding: 54px 20px 66px 20px;
   background: $background-main-color;
+  padding: 54px 20px 66px 20px;
+
+  .restaurants-wrapper {
+    max-width: 1080px;
+    margin: 0 auto;
+    @include flex-column-gap(18px);
+  }
+
   h1 {
     @include title-fontstyle;
   }
+
   .card-wrap {
     @include flex-column-gap(20px);
+
     > a {
       width: 100%;
     }
   }
+
   .card {
     width: 100%;
     height: 250px;
@@ -18,11 +27,13 @@
     overflow: hidden;
     background: #fff;
     position: relative;
+
     img {
       width: 100%;
       height: 70%;
       object-fit: cover;
     }
+
     .new {
       position: absolute;
       width: 80px;
@@ -35,21 +46,26 @@
       @include center-flex;
       @include text-fontstyle($size: 14px);
     }
+
     .card-content {
       height: 30%;
       padding: 0 25px 0 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+
       .card-title {
         @include flex-column-gap(5px);
+
         h3 {
           @include text-fontstyle($size: 18px, $weight: bold);
         }
+
         p {
           @include text-fontstyle($size: 17px, $weight: lighter);
         }
       }
+
       .btn-like {
         width: 22px;
         height: 22px;
@@ -62,12 +78,14 @@
 @media screen and (min-width: 768px) {
   .restaurants {
     padding: 30px 20px 30px 20px;
+
     .card-wrap {
       flex-direction: row;
       flex-wrap: wrap;
       gap: 0;
       row-gap: 50px;
       justify-content: space-between;
+
       > a {
         width: 45%;
       }
