--- a/sass/pages/menu/_menu.scss
+++ b/sass/pages/menu/_menu.scss
@@ -1,17 +1,20 @@
 .restaurant-img {
   width: 100%;
-  height: auto;
+  height: 275px;
+  object-fit: cover;
 }
 
 .menu-wrapper {
+  max-width: 1080px;
+  margin: 0 auto;
   @include flex-column-gap(40px);
   align-items: center;
   background: $background-main-color;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
   padding: 32px 13px 40px 13px;
   position: relative;
-  margin-top: -31px;
+  margin-top: -35px;
   .menu-wrapper__title {
     display: flex;
     justify-content: space-between;
@@ -68,5 +71,23 @@
         @include text-fontstyle($size: 15px, $weight: normal);
       }
     }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .restaurant-img {
+    width: 100%;
+    height: 380px;
+  }
+
+  .menu-wrapper {
+    .menu-wrapper__title {
+      justify-content: center;
+      gap: 24px;
+    }
+  }
+
+  .section__wrapper {
+    width: 60%;
   }
 }
