--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,12 +8,41 @@
   color: white;
   @include text-fontstyle($size: 16px, $weight: normal);
   filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
+  transition: transform 400ms;
   &:hover {
+    filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.4));
     background: linear-gradient(
       0deg,
       lighten($primary-color, 5%) 0%,
       lighten($secondary-color, 5%) 100%
     );
     transition: background 0.3s ease;
+    transform: scale(1.1);
+  }
+}
+
+.btn-like {
+  cursor: pointer;
+  width: 22px;
+  height: 22px;
+  @include center-flex;
+  .full-heart {
+    display: none;
+  }
+  &:hover {
+    .empty-heart {
+      display: none;
+    }
+    .full-heart {
+      display: block;
+      &::before {
+        background-image: linear-gradient($primary-color, $secondary-color);
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+      }
+      --fa-beat-fade-scale: 1.25;
+      --fa-beat-fade-opacity: 0;
+    }
   }
 }
