--- a/sass/pages/accueil/_restaurant.scss
+++ b/sass/pages/accueil/_restaurant.scss
@@ -43,6 +43,7 @@
       border-radius: 2px;
       background: $new-btn-background;
       color: $new-btn-txt-color;
+      filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
       @include center-flex;
       @include text-fontstyle($size: 14px);
     }
