--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,11 @@ p {
 }
 
 a {
+  color: inherit;
   text-decoration: none;
+}
+a:visited {
+  color: inherit;
 }
 
 body {
@@ -16,6 +20,101 @@ body {
 
 * {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader .fa-spinner {
+  font-size: 4em;
+  animation: loading 3s both;
+}
+
+@keyframes loading {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+    transform: rotate(0deg);
+  }
+  30% {
+    transform: rotate(90deg);
+    animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  }
+  80% {
+    transform: rotate(360deg);
+    animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  }
+  99% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.main-container {
+  animation: hidden 8s both;
+}
+
+@keyframes hidden {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.btn-primary {
+  height: 50px;
+  width: 220px;
+  background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  color: white;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: normal;
+  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
+  transition: transform 400ms;
+}
+.btn-primary:hover {
+  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.4));
+  background: linear-gradient(0deg, rgb(160.5, 107.125, 224.375) 0%, rgb(255, 146.5, 225.0410447761) 100%);
+  transition: background 0.3s ease;
+  transform: scale(1.1);
+}
+
+.btn-like {
+  cursor: pointer;
+  width: 22px;
+  height: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-like .full-heart {
+  display: none;
+}
+.btn-like:hover .empty-heart {
+  display: none;
+}
+.btn-like:hover .full-heart {
+  display: block;
+  --fa-beat-fade-scale: 1.25;
+  --fa-beat-fade-opacity: 0;
+}
+.btn-like:hover .full-heart::before {
+  background-image: linear-gradient(#9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .header-bar {
@@ -40,9 +139,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding-left: 25px;
-  padding-top: 22px;
-  padding-bottom: 22px;
+  padding: 22px 0 22px 25px;
 }
 .footer-bar h2 {
   font-family: "Shrikhand";
@@ -57,6 +154,7 @@ body {
   color: #ffffff;
   font-family: "Roboto";
   font-size: 16px;
+  font-weight: normal;
 }
 .footer-bar .footer-content .footer-content__icons {
   display: flex;
@@ -69,7 +167,34 @@ body {
 .footer-bar .footer-content .fa-handshake-angle {
   margin-right: 5px;
 }
+.footer-bar .footer-content .footer-content__text {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
 
+@media screen and (min-width: 768px) {
+  .footer-bar {
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 57px 65px 30px 0;
+    align-items: center;
+    gap: 75px;
+  }
+  .footer-bar h2 {
+    order: 2;
+  }
+  .footer-bar .footer-content {
+    flex-direction: row;
+    gap: 45px;
+  }
+  .footer-bar .footer-content .footer-content__icons {
+    flex-direction: row;
+  }
+  .footer-bar .footer-content .footer-content__text {
+    flex-direction: row;
+  }
+}
 .location-bar {
   height: 50px;
   background-color: #eaeaea;
@@ -77,16 +202,319 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 .location-bar input {
   border: none;
   background-color: #eaeaea;
-  font-size: 16px;
   font-family: "Roboto";
+  font-size: 16px;
+  font-weight: normal;
   text-align: center;
 }
 .location-bar .fa-location-dot {
   color: #353535;
+}
+
+.reservation {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  align-items: center;
+  padding-top: 27px;
+  padding-bottom: 57px;
+  background-color: #f6f6f6;
+}
+.reservation h1 {
+  font-family: "Roboto";
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+}
+.reservation p {
+  font-family: "Roboto";
+  font-size: 18px;
+  font-weight: lighter;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .reservation {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+.fonctionnement {
+  max-width: 1080px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  padding: 48px 0 68px 20px;
+}
+.fonctionnement h1 {
+  font-family: "Roboto";
+  font-size: 24px;
+  font-weight: bold;
+}
+.fonctionnement .fonction-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+  padding-left: 13px;
+}
+.fonctionnement .fonction-wrap .button-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 72px;
+  width: 90%;
+  border-radius: 20px;
+  background: #f6f6f6;
+  position: relative;
+  cursor: pointer;
+}
+.fonctionnement .fonction-wrap .button-wrap p {
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: normal;
+}
+.fonctionnement .fonction-wrap .button-wrap .round-number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  background: #9356dc;
+  color: white;
+  border-radius: 15px;
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: normal;
+  position: absolute;
+  left: -12px;
+}
+.fonctionnement .fonction-wrap .button-wrap .fa-solid {
+  color: #7e7e7e;
+}
+.fonctionnement .fonction-wrap .button-wrap:hover {
+  filter: drop-shadow(0px 4px 15px rgba(0, 0, 0, 0.15));
+}
+.fonctionnement .fonction-wrap .button-wrap:hover .fa-solid {
+  color: #9356dc;
+}
+
+@media screen and (min-width: 768px) {
+  .fonctionnement {
+    padding: 50px 20px 50px 20px;
+  }
+  .fonctionnement .fonction-wrap {
+    flex-direction: row;
+    gap: 24px;
+  }
+}
+.restaurants {
+  background: #f6f6f6;
+  padding: 54px 20px 66px 20px;
+}
+.restaurants .restaurants-wrapper {
+  max-width: 1080px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+.restaurants h1 {
+  font-family: "Roboto";
+  font-size: 24px;
+  font-weight: bold;
+}
+.restaurants .card-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.restaurants .card-wrap > a {
+  width: 100%;
+}
+.restaurants .card {
+  width: 100%;
+  height: 250px;
+  border-radius: 15px;
+  overflow: hidden;
+  background: #fff;
+  position: relative;
+}
+.restaurants .card img {
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+}
+.restaurants .card .new {
+  position: absolute;
+  width: 80px;
+  height: 29px;
+  right: 15px;
+  top: 15px;
+  border-radius: 2px;
+  background: #99e2d0;
+  color: #008766;
+  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: normal;
+}
+.restaurants .card .card-content {
+  height: 30%;
+  padding: 0 25px 0 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.restaurants .card .card-content .card-title {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.restaurants .card .card-content .card-title h3 {
+  font-family: "Roboto";
+  font-size: 18px;
+  font-weight: bold;
+}
+.restaurants .card .card-content .card-title p {
+  font-family: "Roboto";
+  font-size: 17px;
+  font-weight: lighter;
+}
+.restaurants .card .card-content .btn-like {
+  width: 22px;
+  height: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .restaurants {
+    padding: 30px 20px 30px 20px;
+  }
+  .restaurants .card-wrap {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0;
+    row-gap: 50px;
+    justify-content: space-between;
+  }
+  .restaurants .card-wrap > a {
+    width: 45%;
+  }
+}
+.restaurant-img {
+  width: 100%;
+  height: 275px;
+  object-fit: cover;
+}
+
+.menu-wrapper {
+  max-width: 1080px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
+  background: #f6f6f6;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+  padding: 32px 13px 40px 13px;
+  position: relative;
+  margin-top: -35px;
+}
+.menu-wrapper .menu-wrapper__title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 4px;
+  width: 100%;
+}
+.menu-wrapper .menu-wrapper__title h1 {
+  font-family: "Shrikhand";
+  font-size: 28px;
+}
+.menu-wrapper .menu-wrapper__title .btn-like {
+  padding-right: 25px;
+}
+
+.section__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  width: 100%;
+}
+.section__wrapper > h2 {
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: lighter;
+}
+.section__wrapper span {
+  position: relative;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: lighter;
+}
+.section__wrapper span::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 3px;
+  background-color: #99e2d0;
+}
+.section__wrapper .food__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  justify-content: space-evenly;
+  height: 70px;
+  padding: 0 15px 0 15px;
+  background: #fff;
+  border-radius: 15px;
+}
+.section__wrapper .food__wrapper > h3 {
+  font-family: "Roboto";
+  font-size: 18px;
+  font-weight: normal;
+}
+.section__wrapper .food__wrapper .food__wrapper--content {
+  display: flex;
+  justify-content: space-between;
+}
+.section__wrapper .food__wrapper .food__wrapper--content > h2 {
+  font-family: "Roboto";
+  font-size: 15px;
+  font-weight: lighter;
+}
+.section__wrapper .food__wrapper .food__wrapper--content > p {
+  font-family: "Roboto";
+  font-size: 15px;
+  font-weight: normal;
+}
+
+@media screen and (min-width: 768px) {
+  .restaurant-img {
+    width: 100%;
+    height: 380px;
+  }
+  .menu-wrapper .menu-wrapper__title {
+    justify-content: center;
+    gap: 24px;
+  }
+  .section__wrapper {
+    width: 60%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
