--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 }
 .loader .fa-spinner {
   font-size: 8em;
-  animation: loading 4s forwards;
+  animation: loading 3s forwards;
 }
 .loader .fa-spinner::before {
   background-image: linear-gradient(#9356dc, #ff79da);
@@ -41,13 +41,25 @@ body {
   color: transparent;
 }
 
+.main-container {
+  opacity: 0;
+  animation: showContent 0.5s 2.5s forwards;
+}
+
 @keyframes loading {
   0% {
-    opacity: 0;
+    opacity: 0.1;
     transform: rotate(0deg);
   }
   20% {
+    transform: rotate(90deg);
+  }
+  40% {
+    transform: rotate(180deg);
     opacity: 1;
+  }
+  60% {
+    transform: rotate(270deg);
   }
   80% {
     transform: rotate(360deg);
@@ -57,20 +69,12 @@ body {
     transform: rotate(360deg);
   }
 }
-.main-container {
-  opacity: 0;
-  visibility: hidden;
-  animation: showContent 0.5s 3s forwards;
-}
-
 @keyframes showContent {
-  0% {
+  from {
     opacity: 0;
-    visibility: hidden;
   }
-  100% {
+  to {
     opacity: 1;
-    visibility: visible;
   }
 }
 .checkmark {
@@ -108,7 +112,7 @@ body {
   font-size: 16px;
   font-weight: normal;
   filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
-  transition: transform 400ms;
+  transition: transform 400ms ease;
 }
 .btn-primary:hover {
   filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.4));
@@ -119,28 +123,25 @@ body {
 
 .btn-like {
   cursor: pointer;
-  width: 22px;
-  height: 22px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
+}
+.btn-like .empty-heart {
+  position: absolute;
+  transform: scale(1.1);
 }
 .btn-like .full-heart {
-  display: none;
+  position: absolute;
+  transform: scale(0);
+  transition: transform 500ms ease;
 }
-.btn-like:hover .empty-heart {
-  display: none;
-}
-.btn-like:hover .full-heart {
-  display: block;
-  --fa-beat-fade-scale: 1.25;
-  --fa-beat-fade-opacity: 0;
-}
-.btn-like:hover .full-heart::before {
+.btn-like .full-heart::before {
   background-image: linear-gradient(#9356dc, #ff79da);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+}
+.btn-like:hover .full-heart {
+  transform: scale(0.9);
 }
 
 .header-bar {
@@ -475,7 +476,7 @@ body {
 
 .section__wrapper {
   opacity: 0;
-  animation: fadeIn 1s ease-out forwards;
+  animation: showContent 1s ease-out forwards;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -549,14 +550,6 @@ body {
   animation-delay: 1.5s;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
 @media screen and (min-width: 768px) {
   .restaurant-img {
     width: 100%;
