--- a/sass/pages/menu/_menu.scss
+++ b/sass/pages/menu/_menu.scss
@@ -33,7 +33,7 @@
 
 .section__wrapper {
   opacity: 0;
-  animation: fadeIn 1s ease-out forwards;
+  animation: showContent 1s ease-out forwards;
   @include flex-column-gap(12px);
   width: 100%;
   > h2 {
@@ -92,15 +92,6 @@
 
 .desserts {
   animation-delay: 1.5s;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
 
 @media screen and (min-width: 768px) {
