--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -7,10 +7,7 @@
     font-size: 8em;
     animation: loading 3s forwards;
     &::before {
-      background-image: linear-gradient($primary-color, $secondary-color);
-      background-clip: text;
-      -webkit-background-clip: text;
-      color: transparent;
+      @include before-gradient-color;
     }
   }
 }
@@ -18,37 +15,4 @@
 .main-container {
   opacity: 0;
   animation: showContent 0.5s 2.5s forwards;
-}
-
-@keyframes loading {
-  0% {
-    opacity: 0.1;
-    transform: rotate(0deg);
-  }
-  20% {
-    transform: rotate(90deg);
-  }
-  40% {
-    transform: rotate(180deg);
-    opacity: 1;
-  }
-  60% {
-    transform: rotate(270deg);
-  }
-  80% {
-    transform: rotate(360deg);
-  }
-  100% {
-    opacity: 0;
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes showContent {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
