--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "./utils/mixins";
 
 // Components
+@import "./components/animation";
 @import "./components/loader";
 @import "./components/checkmark";
 @import "./components/buttons";
