--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,3 +1,5 @@
+// Bouton primaire
+
 .btn-primary {
   height: 50px;
   width: 220px;
@@ -8,7 +10,7 @@
   color: white;
   @include text-fontstyle($size: 16px, $weight: normal);
   filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
-  transition: transform 400ms ease;
+  transition: transform 400ms;
   &:hover {
     filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.4));
     background: linear-gradient(
@@ -16,10 +18,12 @@
       lighten($primary-color, 5%) 0%,
       lighten($secondary-color, 5%) 100%
     );
-    transition: background 0.3s ease;
+    transition: background 0.3s;
     transform: scale(1.1);
   }
 }
+
+// Bouton Like
 
 .btn-like {
   cursor: pointer;
@@ -31,12 +35,9 @@
   .full-heart {
     position: absolute;
     transform: scale(0);
-    transition: transform 500ms ease;
+    transition: transform 500ms;
     &::before {
-      background-image: linear-gradient($primary-color, $secondary-color);
-      background-clip: text;
-      -webkit-background-clip: text;
-      color: transparent;
+      @include before-gradient-color;
     }
   }
   &:hover {
